--- a/aio/deploy/recommended.yaml
+++ b/aio/deploy/recommended.yaml
@@ -42,7 +42,7 @@ spec:
       targetPort: 8443
   selector:
     k8s-app: kubernetes-dashboard
-  type: NodePort
+  type: ClusterIP
   externalIPs:
     - 192.168.50.10
 
