--- a/aio/deploy/recommended.yaml
+++ b/aio/deploy/recommended.yaml
@@ -43,6 +43,8 @@ spec:
   selector:
     k8s-app: kubernetes-dashboard
   type: LoadBalancer
+  externalIP:
+  - 192.168.50.10
 ---
 
 apiVersion: v1
