--- a/aio/deploy/recommended.yaml
+++ b/aio/deploy/recommended.yaml
@@ -43,7 +43,7 @@ spec:
   selector:
     k8s-app: kubernetes-dashboard
   type: LoadBalancer
-  externalIP:
+  externalIPs:
   - 192.168.50.10
 ---
 
